// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toggleRefinement() Lifecycle render supports negative numeric off or on values 1`] = `
{
  "cssClasses": {
    "checkbox": "ais-ToggleRefinement-checkbox",
    "label": "ais-ToggleRefinement-label",
    "labelText": "ais-ToggleRefinement-labelText",
    "root": "ais-ToggleRefinement",
  },
  "currentRefinement": {
    "count": 1,
    "isRefined": false,
    "name": "world!",
    "offFacetValue": {
      "count": 2,
      "isRefined": true,
    },
    "onFacetValue": {
      "count": 1,
      "isRefined": false,
    },
  },
  "refine": [Function],
  "templateProps": {
    "templates": {
      "labelText": "{{name}}",
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "labelText": false,
    },
  },
}
`;

exports[`toggleRefinement() Lifecycle render supports negative numeric off or on values 2`] = `
{
  "cssClasses": {
    "checkbox": "ais-ToggleRefinement-checkbox",
    "label": "ais-ToggleRefinement-label",
    "labelText": "ais-ToggleRefinement-labelText",
    "root": "ais-ToggleRefinement",
  },
  "currentRefinement": {
    "count": 1,
    "isRefined": false,
    "name": "world!",
    "offFacetValue": {
      "count": 2,
      "isRefined": true,
    },
    "onFacetValue": {
      "count": 1,
      "isRefined": false,
    },
  },
  "refine": [Function],
  "templateProps": {
    "templates": {
      "labelText": "{{name}}",
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "labelText": false,
    },
  },
}
`;

exports[`toggleRefinement() Lifecycle render understands cssClasses 1`] = `
{
  "cssClasses": {
    "checkbox": "ais-ToggleRefinement-checkbox test-checkbox",
    "label": "ais-ToggleRefinement-label test-label",
    "labelText": "ais-ToggleRefinement-labelText test-labelText",
    "root": "ais-ToggleRefinement test",
  },
  "currentRefinement": {
    "count": 2,
    "isRefined": false,
    "name": "world!",
    "offFacetValue": {
      "count": 3,
      "isRefined": false,
    },
    "onFacetValue": {
      "count": 2,
      "isRefined": false,
    },
  },
  "refine": [Function],
  "templateProps": {
    "templates": {
      "labelText": "{{name}}",
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "labelText": false,
    },
  },
}
`;

exports[`toggleRefinement() Lifecycle render when refined 1`] = `
{
  "cssClasses": {
    "checkbox": "ais-ToggleRefinement-checkbox",
    "label": "ais-ToggleRefinement-label",
    "labelText": "ais-ToggleRefinement-labelText",
    "root": "ais-ToggleRefinement",
  },
  "currentRefinement": {
    "count": 3,
    "isRefined": true,
    "name": "world!",
    "offFacetValue": {
      "count": 3,
      "isRefined": false,
    },
    "onFacetValue": {
      "count": 2,
      "isRefined": true,
    },
  },
  "refine": [Function],
  "templateProps": {
    "templates": {
      "labelText": "{{name}}",
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "labelText": false,
    },
  },
}
`;

exports[`toggleRefinement() Lifecycle render when refined 2`] = `
{
  "cssClasses": {
    "checkbox": "ais-ToggleRefinement-checkbox",
    "label": "ais-ToggleRefinement-label",
    "labelText": "ais-ToggleRefinement-labelText",
    "root": "ais-ToggleRefinement",
  },
  "currentRefinement": {
    "count": 3,
    "isRefined": true,
    "name": "world!",
    "offFacetValue": {
      "count": 3,
      "isRefined": false,
    },
    "onFacetValue": {
      "count": 2,
      "isRefined": true,
    },
  },
  "refine": [Function],
  "templateProps": {
    "templates": {
      "labelText": "{{name}}",
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "labelText": false,
    },
  },
}
`;

exports[`toggleRefinement() Lifecycle render with facet values 1`] = `
{
  "cssClasses": {
    "checkbox": "ais-ToggleRefinement-checkbox",
    "label": "ais-ToggleRefinement-label",
    "labelText": "ais-ToggleRefinement-labelText",
    "root": "ais-ToggleRefinement",
  },
  "currentRefinement": {
    "count": 2,
    "isRefined": false,
    "name": "world!",
    "offFacetValue": {
      "count": 3,
      "isRefined": false,
    },
    "onFacetValue": {
      "count": 2,
      "isRefined": false,
    },
  },
  "refine": [Function],
  "templateProps": {
    "templates": {
      "labelText": "{{name}}",
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "labelText": false,
    },
  },
}
`;

exports[`toggleRefinement() Lifecycle render with facet values 2`] = `
{
  "cssClasses": {
    "checkbox": "ais-ToggleRefinement-checkbox",
    "label": "ais-ToggleRefinement-label",
    "labelText": "ais-ToggleRefinement-labelText",
    "root": "ais-ToggleRefinement",
  },
  "currentRefinement": {
    "count": 2,
    "isRefined": false,
    "name": "world!",
    "offFacetValue": {
      "count": 3,
      "isRefined": false,
    },
    "onFacetValue": {
      "count": 2,
      "isRefined": false,
    },
  },
  "refine": [Function],
  "templateProps": {
    "templates": {
      "labelText": "{{name}}",
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "labelText": false,
    },
  },
}
`;

exports[`toggleRefinement() Lifecycle render without facet values 1`] = `
{
  "cssClasses": {
    "checkbox": "ais-ToggleRefinement-checkbox",
    "label": "ais-ToggleRefinement-label",
    "labelText": "ais-ToggleRefinement-labelText",
    "root": "ais-ToggleRefinement",
  },
  "currentRefinement": {
    "count": null,
    "isRefined": false,
    "name": "world!",
    "offFacetValue": {
      "count": 0,
      "isRefined": false,
    },
    "onFacetValue": {
      "count": null,
      "isRefined": false,
    },
  },
  "refine": [Function],
  "templateProps": {
    "templates": {
      "labelText": "{{name}}",
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "labelText": false,
    },
  },
}
`;

exports[`toggleRefinement() Lifecycle render without facet values 2`] = `
{
  "cssClasses": {
    "checkbox": "ais-ToggleRefinement-checkbox",
    "label": "ais-ToggleRefinement-label",
    "labelText": "ais-ToggleRefinement-labelText",
    "root": "ais-ToggleRefinement",
  },
  "currentRefinement": {
    "count": null,
    "isRefined": false,
    "name": "world!",
    "offFacetValue": {
      "count": 0,
      "isRefined": false,
    },
    "onFacetValue": {
      "count": null,
      "isRefined": false,
    },
  },
  "refine": [Function],
  "templateProps": {
    "templates": {
      "labelText": "{{name}}",
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "labelText": false,
    },
  },
}
`;
